syntax = "proto3";
package grpctest_proto;

option go_package=".;Greeter";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply){}
    rpc ServerStreamSayHello(HelloRequest) returns (stream HelloReply){}
    rpc ClientStreamSayHello(stream HelloRequest) returns (HelloReply){}
    rpc BothStreamSayHello(stream HelloRequest) returns(stream HelloReply){}
}

message HelloRequest {
    string name = 1;
}

message HelloReply{
    string message = 1;
}